--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
             <h1 hidden>Portfolio</h1>
             <a class="navigation-title link" href="" lang="en">
                 <span class="web">Web</span>
-                <span class="navigation-studio">Studio</span>
+                <span class="studio">Studio</span>
             </a>
             <ul class="navigation-list list">
                 <li>
