--- a/index.html
+++ b/index.html
@@ -11,32 +11,36 @@
     <title>Web Studio</title>
 </head>
 <body>
-    <header>
-        <nav class="navigation">
-            <a class="navigation-title link" href="" lang="en">
-                <span class="web">Web</span>
-                <span class="navigation-studio">Studio</span> 
-            </a>
+    <!--Header-->
+    <header class="header">
+        <div class="container header-container">
+            <nav class="navigation">
+                <a class="navigation-title link" href="" lang="en">
+                    <span class="web">Web</span>
+                    <span class="studio">Studio</span>
+                </a>
                 <ul class="navigation-list list">
-                    <li>
+                    <li class="navigation-item">
                         <a class="navigation-link link" href="">Студия</a>
                     </li>
-                    <li>
+                    <li class="navigation-item">
                         <a class="navigation-link link" href="./portfolio.html">Портфолио</a>
                     </li>
-                    <li>
+                    <li class="navigation-item">
                         <a class="navigation-link link" href="">Контакты</a>
-                    </li>                
+                    </li>
                 </ul>
-        </nav>
+            </nav>
             <a class="mail-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             <a class="tel-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+        </div>
     </header>
+    <!--Main-->
     <main>
 
         <!--HERO-->
             <section class="hero">
-                <div class="hero-area">
+                <div class="hero-area container">
                     <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
                     <button class="hero-btn" type="button">Заказать услугу</button>
                 </div>
@@ -119,6 +123,7 @@
                 </div>
             </section>
     </main>
+    <!--Footer-->
     <footer class="footer">
         <a class="footer-title link" href="" lang="en">
             <span class="web">Web</span>
