--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         <!--Features-->
             <section class="features">
-                <div class="features-area">
+                <div class="features-area container">
                     <ul class="features-list list">
                         <li class="features-item">
                             <h3 class="features-title">Внимание к деталям</h3>
@@ -76,7 +76,7 @@
                 </div>
             </section>
 
-            <!--About-->
+        <!--About-->
             <section class="about">
                 <div class="about-area">
                     <h2 class="about-title title">Чем мы занимаемся</h2>
@@ -94,7 +94,7 @@
                 </div>
             </section>
 
-            <!--Team-->
+        <!--Team-->
             <section class="team">
                 <div class="team-area">
                     <h2 class="team-title title">Наша команда</h2>
