--- a/index.html
+++ b/index.html
@@ -54,20 +54,14 @@
                             <h3 class="features-title">Внимание к деталям</h3>
                             <p class="features-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                         </li>
-                    </ul>
-                    <ul class="features-list list">
                         <li class="features-item">
                             <h3 class="features-title">Пунктуальность</h3>
                             <p class="features-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                         </li>
-                    </ul>
-                    <ul class="features-list list">
                         <li class="features-item">
                             <h3 class="features-title">Планирование</h3>
                             <p class="features-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                         </li>
-                    </ul>
-                    <ul class="features-list list">
                         <li class="features-item">
                             <h3 class="features-title">Современные технологии</h3>
                             <p class="features-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
@@ -77,7 +71,7 @@
             </section>
 
         <!--About-->
-            <section class="about">
+            <section class="about container">
                 <div class="about-area">
                     <h2 class="about-title title">Чем мы занимаемся</h2>
                     <ul class="about-list list">
@@ -96,7 +90,7 @@
 
         <!--Team-->
             <section class="team">
-                <div class="team-area">
+                <div class="team-area container">
                     <h2 class="team-title title">Наша команда</h2>
                     <ul class="team-list list">
                         <li class="team-info">
