--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     <main>
 
         <!--HERO-->
-            <section class="hero">
-                <div class="hero-area container">
+            <section class="hero container">
+                <div class="hero-area">
                     <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
                     <button class="hero-btn" type="button">Заказать услугу</button>
                 </div>
@@ -95,23 +95,32 @@
                     <ul class="team-list list">
                         <li class="team-info">
                             <img class="team-img" src="./images/team/igor.jpg" alt="Игорь Демьяненко" width="270" height="260">
-                            <h3 class="team-developer" lang="ru">Игорь Демьяненко</h3>
-                            <p class="team-developer-direction" lang="en">Product Designer</p>
+                            <div class="team-info-container">
+                                <h3 class="team-developer" lang="ru">Игорь Демьяненко</h3>
+                                <p class="team-developer-direction" lang="en">Product Designer</p>
+                            </div>
+
                         </li>
                         <li class="team-info">
                             <img class="team-img" src="./images/team/olga.jpg" alt="Ольга Репина" width="270" height="260">
-                            <h3 class="team-developer" lang="ru">Ольга Репина</h3>
-                            <p class="team-developer-direction" lang="en">Frontend Developer</p>
+                            <div class="team-info-container">
+                                <h3 class="team-developer" lang="ru">Ольга Репина</h3>
+                                <p class="team-developer-direction" lang="en">Frontend Developer</p>
+                            </div>
                         </li>
                         <li class="team-info">
                             <img class="team-img" src="./images/team/nikolai.jpg" alt="Николай Тарасов" width="270" height="260">
-                            <h3 class="team-developer" lang="ru">Николай Тарасов</h3>
-                            <p class="team-developer-direction" lang="en">Marketing</p>
+                            <div class="team-info-container">
+                                <h3 class="team-developer" lang="ru">Николай Тарасов</h3>
+                                <p class="team-developer-direction" lang="en">Marketing</p>
+                            </div>
                         </li>
                         <li class="team-info">
                             <img class="team-img" src="./images/team/michail.jpg" alt="Михаил Ермаков" width="270" height="260">
-                            <h3 class="team-developer" lang="ru">Михаил Ермаков</h3>
-                            <p class="team-developer-direction" lang="en">UI Designer</p>
+                            <div class="team-info-container">
+                                <h3 class="team-developer" lang="ru">Михаил Ермаков</h3>
+                                <p class="team-developer-direction" lang="en">UI Designer</p>
+                            </div>
                         </li>
                     </ul>
                 </div>
