--- a/portfolio.html
+++ b/portfolio.html
@@ -130,24 +130,28 @@
             </ul>
         </section>
     </main>
-    <footer class="footer">
+    <footer class="footer container">
         <a class="footer-title link" href="" lang="en">
-            <span class="web">Web</span>
-            <span class="footer-studio">Studio</span>
+            <div class="footer-title-container">
+                <span class="web">Web</span>
+                <span class="footer-studio">Studio</span>
+            </div>
         </a>
-        <address class="address">
+        <address class="address container">
+            <div class="add-container">
             <ul class="address-list list">
-                <li>
+                <li class="add-list-link">
                     <a class="address-link link" href="https://goo.gl/maps/1xMKTDYnkmWsLrc38" target="blank">г. Киев, пр-т
                         Леси Украинки, 26</a>
-                </li>
-                <li>
+                </li>    
+                <li class="add-list-link">
                     <a class="address-mail-tel link" href="mailto:info@example.com">info@example.com</a>
                 </li>
-                <li>
+                <li class="add-list-link">
                     <a class="address-mail-tel link" href="tel:+380961111111">+38 096 111 11 11</a>
                 </li>
             </ul>
+            </div>
         </address>
     </footer>
 </body>
