завершение оформления студии/портфолио

--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
     </header>
     <main>
         <!--BUTTONS-->
-        <section class="buttons">
+        <section class="buttons container">
             <h2 class="buttons-title" hidden>Buttons</h2>
             <ul class="buttons-list list">
                 <li class="buttons-item">
@@ -61,70 +61,93 @@
                 </li>
             </ul>
         </section>
-        <section class="category">
+        <section class="category container">
             <ul class="category-list list">
                 <li class="category-items">
                     <a>
                         <img class="category-img" src="./images/portfolio/технокряк.jpg" alt="Веб-сайт" width="370" height="294">
-                        <h3 class="category-title">Технокряк</h3>
-                        <p class="category-name">Веб-сайт</p>
+                             <div class="category-container">
+                                <h3 class="category-title">Технокряк</h3>
+                                 <p class="category-name">Веб-сайт</p>
+                            </div>
                     </a> 
                 </li>
-                <li>
+                <li class="category-items">
                     <a>
                         <img class="category-img" src="./images/portfolio/orlean.jpg" alt="Дизайн" width="370" height="294">
+                        <div class="category-container">
                         <h3 class="category-title" lang="en">Постер New Orlean vs Golden Star</h3>
                         <p class="category-name">Дизайн</p>
+                        </div>
+  
                     </a>
                     
                 </li>
-                <li>
+                <li class="category-items">
                     <a>
                         <img class="category-img" src="./images/portfolio/ресторан.jpg" alt="Приложение" width="370" height="294">
+                        <div class="category-container">
                         <h3 class="category-title" lang="en">Ресторан Seafood</h3>
                         <p class="category-name">Приложение</p>
+                        </div>
                     </a>
                 </li>
-                <li>
+                <li class="category-items">
                     <a>
                         <img class="category-img" src="./images/portfolio/prime.jpg" alt="Маркетинг" width="370" height="294">
+                        <div class="category-container">
                         <h3 class="category-title" lang="en">Проект Prime</h3>
                         <p class="category-name">Маркетинг</p>
+                        </div>
+
                     </a>
                 </li>
-                <li>
+                <li class="category-items">
                     <a>
                         <img class="category-img" src="./images/portfolio/boxes.jpg" alt="Приложение" width="370" height="294">
+                        <div class="category-container">
                         <h3 class="category-title" lang="en">Проект Boxes</h3>
                         <p class="category-name">Приложение</p>
+                        </div>
                     </a>
                 </li>
-                <li>
+                <li class="category-items">
                     <a>
                         <img class="category-img" src="./images/portfolio/inspiration.jpg" alt="Веб-сайт" width="370" height="294">
+                        <div class="category-container">
                         <h3 class="category-title">Inspiration has no Borders</h3>
                         <p class="category-name">Веб-сайт</p>
+                        </div>
+
                     </a>
                 </li>
-                <li>
+                <li class="category-items">
                     <a>
                         <img class="category-img" src="./images/portfolio/limited.jpg" alt="Дизайн" width="370" height="294">
+                        <div class="category-container">
                         <h3 class="category-title" lang="en">Издание Limited Edition</h3>
                         <p class="category-name">Дизайн</p>
+                        </div>
+  
                     </a>
                 </li>
-                <li>
+                <li class="category-items">
                     <a>
                         <img class="category-img" src="./images/portfolio/lab.jpg" alt="Маркетинг" width="370" height="294">
+                        <div class="category-container">
                         <h3 class="category-title" lang="en">Проект LAB</h3>
                         <p class="category-name">Маркетинг</p>
+                        </div>
+
                     </a>
                 </li>
-                <li>
+                <li class="category-items">
                     <a>
                         <img src="./images/portfolio/business.jpg" alt="Приложение" width="370" height="294">
+                        <div class="category-container">
                         <h3 class="category-title">Growing Business</h3>
                         <p class="category-name">Приложение</p>
+                        </div>
                     </a>
                 </li>
             </ul>
