--- a/index.html
+++ b/index.html
@@ -13,26 +13,28 @@
 <body>
     <!--Header-->
     <header class="header">
-        <div class="container header-container">
-            <nav class="navigation">
-                <a class="navigation-title link" href="" lang="en">
-                    <span class="web">Web</span>
-                    <span class="studio">Studio</span>
-                </a>
-                <ul class="navigation-list list">
-                    <li class="navigation-item">
-                        <a class="navigation-link link" href="">Студия</a>
-                    </li>
-                    <li class="navigation-item">
-                        <a class="navigation-link link" href="./portfolio.html">Портфолио</a>
-                    </li>
-                    <li class="navigation-item">
-                        <a class="navigation-link link" href="">Контакты</a>
-                    </li>
-                </ul>
-            </nav>
-            <a class="mail-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a class="tel-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+        <div class="container">
+            <div class="header-container">
+                <nav class="navigation">
+                    <a class="navigation-title link" href="" lang="en">
+                        <span class="web">Web</span>
+                        <span class="studio">Studio</span>
+                    </a>
+                    <ul class="navigation-list list">
+                        <li class="navigation-item">
+                            <a class="navigation-link link" href="">Студия</a>
+                        </li>
+                        <li class="navigation-item">
+                            <a class="navigation-link link" href="./portfolio.html">Портфолио</a>
+                        </li>
+                        <li class="navigation-item">
+                            <a class="navigation-link link" href="">Контакты</a>
+                        </li>
+                    </ul>
+                </nav>
+                <a class="mail-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a class="tel-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+            </div>
         </div>
     </header>
     <!--Main-->
@@ -127,30 +129,35 @@
             </section>
     </main>
     <!--Footer-->
-    <footer class="footer container">
-        <a class="footer-title link" href="" lang="en">
-            <div class="footer-title-container">
-                <span class="web">Web</span>
-                <span class="footer-studio">Studio</span>
-            </div>
+    <footer class="footer">
+        <div class="container">
+            <a class="footer-title link" href="" lang="en">
+                <div class="footer-title-container">
+                    <span class="web">Web</span>
+                    <span class="footer-studio">Studio</span>
+                </div>
             
-        </a>
-        <address class="address container">
-            <div class="add-container">
-                <ul class="address-list list">
-                    <li class="add-list-link">
-                        <a class="address-link link" href="https://goo.gl/maps/1xMKTDYnkmWsLrc38" target="blank">г. Киев, пр-т Леси
-                            Украинки, 26</a>
-                    </li>
-                    <li class="add-list-link">
-                        <a class="address-mail-tel link" href="mailto:info@example.com">info@example.com</a>
-                    </li>
-                    <li class="add-list-link">
-                        <a class="address-mail-tel link" href="tel:+380961111111">+38 096 111 11 11</a>
-                    </li>
-                </ul>
-            </div>      
-        </address>
+            </a>
+            <address class="address container">
+                <div class="add-container">
+                    <ul class="address-list list">
+                        <li class="add-list-link">
+                            <a class="address-link link" href="https://goo.gl/maps/1xMKTDYnkmWsLrc38" target="blank">г. Киев, пр-т
+                                Леси
+                                Украинки, 26</a>
+                        </li>
+                        <li class="add-list-link">
+                            <a class="address-mail-tel link" href="mailto:info@example.com">info@example.com</a>
+                        </li>
+                        <li class="add-list-link">
+                            <a class="address-mail-tel link" href="tel:+380961111111">+38 096 111 11 11</a>
+                        </li>
+                    </ul>
+                </div>
+            </address>
+
+        </div>
+       
     </footer>
 </body>
 </html>
