--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <main>
 
         <!--HERO-->
-            <section class="hero container">
+            <section class="hero">
                 <div class="hero-area">
                     <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
                     <button class="hero-btn" type="button">Заказать услугу</button>
