--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
     <title>Портфолио</title>
 </head>
 <body>
-    <header>
+    <header class="header">
         <div class="container">
             <div class="header-container">
                 <nav class="navigation">
